# app-deployments

./: .gitignore  .gitmodules  Paper2Poster_usage.md  RD-Agent_reasoning.md  README.md  Task1.md  tracker.md  v2_pinned_versions.md
Paper2Poster/: Dockerfile
apps/Paper2Poster/: requirements.txt
apps/RD-Agent/: requirements.txt
apps/bilingual_book_maker/: bilingual_book_maker_usage.md
apps/rawdog/: pyproject.toml  rawdog_reasoning.md
apps/slide-deck-ai/: .gitattributes  requirements.txt  slide-deck-ai_usage.md
apps/zshot/: app.py  setup.py
apps/zshot/zshot/knowledge_extractor/: __init__.py
apps/zshot/zshot/linker/: __init__.py
apps/zshot/zshot/mentions_extractor/: __init__.py
dockerfiles/: README.md
dockerfiles/AgentGPT/: Dockerfile.platform  docker-compose.yml  pyproject.toml
dockerfiles/BettaFish/: docker-compose.yml  requirements.txt
dockerfiles/Biomni/: Dockerfile  entrypoint.py
dockerfiles/Data-Copilot/: Dockerfile  patch_zhipuai.py  requirements.txt
dockerfiles/DataFlow/: requirements.txt
dockerfiles/FunClip/: Dockerfile  requirements.txt
dockerfiles/HuixiangDou/: Dockerfile  pyproject.toml  requirements.txt
dockerfiles/Integuru/: Dockerfile  pyproject.toml
dockerfiles/NarratoAI/: Dockerfile  README.md  requirements.txt
dockerfiles/Paper2Poster/: requirements.txt
dockerfiles/RD-Agent/: Dockerfile  requirements.txt
dockerfiles/SWE-agent/: Dockerfile  README.md  pyproject.toml
dockerfiles/TaskWeaver/: .env.example  Dockerfile  requirements.txt
dockerfiles/TradingAgents/: Dockerfile
dockerfiles/agenticSeek/: config.ini  docker-compose.yml
dockerfiles/attackgen/: .env.example  Dockerfile  requirements.txt
dockerfiles/auto-news/: .env.example  VERSION_NOTE.md  docker-compose.yml
dockerfiles/bilingual_book_maker/: Dockerfile
dockerfiles/chemcrow-public/: Dockerfile  setup.py
dockerfiles/codeinterpreter-api/: Dockerfile  pyproject.toml
dockerfiles/codeqai/: Dockerfile  pyproject.toml
dockerfiles/devika/: .env.example  app.dockerfile  devika.dockerfile  docker-compose.yml  requirements.txt
dockerfiles/django-ai-assistant/: Dockerfile  pyproject.toml
dockerfiles/gpt-engineer/: Dockerfile  README.md  pyproject.toml
dockerfiles/gpt-migrate/: Dockerfile
dockerfiles/gpt-researcher/: Dockerfile
dockerfiles/gpt_academic/: docker-compose.yml  requirements.txt
dockerfiles/gptme/: .env.example  Dockerfile  pyproject.toml
dockerfiles/local-deep-researcher/: .env.example  Dockerfile  pyproject.toml
dockerfiles/localGPT/: docker-compose.yml  requirements.txt
dockerfiles/magentic-ui/: Dockerfile  pyproject.toml
dockerfiles/manga-image-translator/: Dockerfile.patch
dockerfiles/omniparse/: pyproject.toml
dockerfiles/pdfGPT/: Dockerfile  docker-compose.yaml  requirements.txt
dockerfiles/pycorrector/: Dockerfile  requirements.txt
dockerfiles/pyvideotrans/: Dockerfile  requirements-docker.txt
dockerfiles/rawdog/: Dockerfile
dockerfiles/slide-deck-ai/: Dockerfile
dockerfiles/stride-gpt/: .env.example  Dockerfile  requirements.txt
dockerfiles/zshot/: Dockerfile  requirements.txt
docs/: AgentGPT_reasoning.md  AgentGPT_usage.md  AiNiee_usage.md  BettaFish_reasoning.md  BettaFish_usage.md  CHANGES_FROM_ORIGINAL.md  ChatDBG_reasoning.md  ChatDBG_usage.md  DataFlow_reasoning.md  DataFlow_usage.md  FunClip_reasoning.md  FunClip_usage.md  HuixiangDou_reasoning.md  HuixiangDou_usage.md  MedRAX_usage.md  NarratoAI_reasoning.md  NarratoAI_usage.md  Paper2Poster_reasoning.md  Paper2Poster_usage.md  RD-Agent_reasoning.md  RD-Agent_usage.md  SWE-agent_reasoning.md  SWE-agent_usage.md  TaskMatrix_usage.md  TaskWeaver_reasoning.md  TaskWeaver_usage.md  agenticSeek_reasoning.md  agenticSeek_usage.md  attackgen_reasoning.md  attackgen_usage.md  auto-news_reasoning.md  auto-news_usage.md  autoMate_usage.md  bilingual_book_maker_reasoning.md  bilingual_book_maker_usage.md  biomni_reasoning.md  biomni_usage.md  chemcrow-public_reasoning.md  chemcrow-public_usage.md  codeinterpreter-api_reasoning.md  (+54 more)
paper2poster_output/: detail_log.json  log.json  nips-2011-001.pptx
