[tool.poetry]
name = "integuru"
version = "0.1.0"
description = ""
authors = ["alanalanlu <alanlu1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain-openai = "==0.3.35"
langchain-core = "==0.3.81"
langgraph = "==0.3.0"
langgraph-checkpoint = "==2.0.12"
langsmith = "==0.3.45"
python-dotenv = "==1.0.1"
click = "==8.1.7"
playwright = "==1.47.0"
networkx = "==3.6"
matplotlib = "==3.9.2"
ipykernel = "==6.29.5"
urllib3 = "==2.3.0"
h11 = "==0.16.0"
requests = "==2.32.3"
orjson = "==3.10.14"
fonttools = "==4.55.3"
tornado = "==6.5"

[tool.poetry.scripts]
integuru = "integuru.__main__:cli"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
