# NOTE: Copied from apps/gptme/pyproject.toml for reference.
# Minimum version pinning is applied via Poetry caret constraints (e.g. ^1.0)
# but no exact pinning was applied during deployment. The Dockerfile builds
# from the upstream repo's own Dockerfiles (scripts/Dockerfile, scripts/Dockerfile.server).

[project]
name = "gptme"
version = "0.31.0"
description = "Powerful AI agent for coding and general tasks. Terminal-first with shell, code execution, file editing, web browsing, vision, computer use. Unconstrained."
authors = [
    { name = "Erik Bjäreholt", email = "erik@bjareho.lt" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dynamic = ["dependencies"]  # "version"

[project.urls]
Homepage = "https://gptme.org/"
Repository = "https://github.com/gptme/gptme"
Documentation = "https://gptme.org/docs/"
Issues = "https://github.com/gptme/gptme/issues"

[project.scripts]
gptme = "gptme.cli.main:main"
gptme-server = "gptme.server.cli:main"
gptme-acp = "gptme.acp.__main__:main"
gptme-eval = "gptme.eval.main:main"
gptme-util = "gptme.cli.util:main"
gptme-agent = "gptme.agent.cli:main"
gptme-doctor = "gptme.cli.doctor:main"
gptme-auth = "gptme.cli.auth:main"
gptme-onboard = "gptme.cli.onboard:main"
gptme-wut = "gptme.cli.wut:main"
gptme-dspy = "gptme.eval.dspy:main"

[tool.poetry]
packages = [
    { include = "gptme" },
]
include = ["gptme/server/static/**/*", "media/*.png", "media/*.wav"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0"
click-default-group = "^1.2.4"
python-dotenv = "^1.0.0"
rich = "^13.5.2"
tabulate = "*"
pick = "^2.2.0"
tiktoken = ">=0.7"
tomlkit = "*"
typing-extensions = "*"
platformdirs = "^4.3"
lxml = "*"
pypdf = ">=5.1.0"
requests = "^2.32"
json-repair = "^0.32.0"
mcp = "^1.13.0"
questionary = "^2.1.0"
deprecated = "^1.2.18"
python-dateutil = "^2.9.0.post0"
pyyaml = "^6.0.3"

# providers
openai = "^1.0"
anthropic = "^0.47"

# tools
ipython = "^8.17.2"
bashlex = "^0.18"
playwright = {version = "1.49.1", optional=true}
youtube_transcript_api = {version = "^0.6.1", optional=true}
python-xlib = {version = "^0.33", optional=true}

# evals
multiprocessing-logging = "^0.3.4"
dspy = {version = "^3.0.2", python = "<=3.13", optional=true}

# datascience essentials
pillow = {version = "*"}
matplotlib = {version = "*", optional=true}
pandas = {version = "*", optional=true}
numpy = {version = "*", optional=true}
scipy = {version="*", optional=true}
sounddevice = {version="^0.5.1", optional=true}

# server
flask = {version = "^3.0", optional=true}
flask-cors = {version = ">=4,<6", optional=true}
pydantic = "^2.11.7"

# telemetry
opentelemetry-api = {version = "^1.20.0", optional=true}
opentelemetry-sdk = {version = "^1.20.0", optional=true}
opentelemetry-instrumentation-flask = {version = "^0.55b1", optional=true}
opentelemetry-instrumentation-requests = {version = "^0.55b1", optional=true}
opentelemetry-exporter-otlp = {version = "^1.34.1", optional=true}
opentelemetry-exporter-prometheus = {version = "^0.55b1", optional=true}
opentelemetry-instrumentation-anthropic = {version="^0.47.3", optional=true}
opentelemetry-instrumentation-openai = {version="^0.47.3", optional=true}
opentelemetry-instrumentation-threading = {version="^0.55b1", optional=true}
sentence-transformers = {version = "^5.1.2", optional=true}

# build
pyinstaller = {version="^6.15", python=">=3.10,<3.15", optional=true}

# acp (Agent Client Protocol)
agent-client-protocol = {version = ">=0.7", optional=true, python=">=3.10,<3.15"}

[tool.poetry.extras]
server = ["flask", "flask-cors", "pydantic"]
browser = ["playwright"]
datascience = ["matplotlib", "pandas", "numpy"]
computer = []
pyinstaller = ["pyinstaller"]
acp = ["agent-client-protocol"]
youtube = ["youtube_transcript_api"]
tts = ["sounddevice", "scipy", "numpy"]
telemetry = [
    "opentelemetry-api", "opentelemetry-sdk",
    "opentelemetry-exporter-otlp", "opentelemetry-exporter-prometheus",
    "opentelemetry-instrumentation-flask", "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-anthropic", "opentelemetry-instrumentation-openai",
    "opentelemetry-instrumentation-threading",
]
dspy = ["dspy", "sentence-transformers"]
eval = ["dspy", "sentence-transformers"]
all = [
    "flask", "flask-cors", "pydantic",
    "agent-client-protocol",
    "playwright",
    "matplotlib", "pandas", "numpy", "scipy",
    "youtube_transcript_api",
    "sounddevice", "scipy", "numpy",
    "dspy", "sentence-transformers",
    "opentelemetry-api", "opentelemetry-sdk",
    "opentelemetry-exporter-otlp", "opentelemetry-exporter-prometheus",
    "opentelemetry-instrumentation-flask", "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-anthropic", "opentelemetry-instrumentation-openai",
    "opentelemetry-instrumentation-threading",
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
